--- a/cinema-booking-system-backend/src/pom.xml
+++ b/cinema-booking-system-backend/src/pom.xml
@@ -9,17 +9,17 @@
     <packaging>jar</packaging>
 
     <name>cinema-booking-system</name>
-    <description>A booking system where users may login and select movie tickets then checkout</description>
+    <description>REST API for the Cinema Booking System</description>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.6.6</version> <!-- Use the Spring Boot version you need -->
+        <version>3.2.2</version> <!-- Use the Spring Boot version you need -->
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
 
     <properties>
-        <java.version>11</java.version> <!-- Specify your JDK version here -->
+        <java.version>21</java.version> <!-- Specify your JDK version here -->
     </properties>
 
     <dependencies>
