--- a/cinemadb/pom.xml
+++ b/cinemadb/pom.xml
@@ -14,7 +14,7 @@
 	<name>cinemadb</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
-		<java.version>17</java.version>
+		<java.version>21</java.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -37,11 +37,11 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-    		<groupId>jakarta.persistence</groupId>
-    		<artifactId>jakarta.persistence-api</artifactId>
-    		<version>2.2.3</version>
-		</dependency>
-
+   <groupId>javax.persistence</groupId>
+   <artifactId>persistence-api</artifactId>
+   <version>1.0.2</version>
+   <scope>provided</scope>
+</dependency>
 	</dependencies>
 
 	<build>
