--- a/cinema-booking-system/.env
+++ b/cinema-booking-system/.env
@@ -10,3 +10,6 @@ DB_HOST=swe.cly0og6cqjm0.us-east-1.rds.amazonaws.com
 DB_USER=nikmannik
 DB_PASSWORD=nikmannik
 DB_NAME=cinema_db
+
+EMAIL_USER=cinemabookingb8@gmail.com
+EMAIL_PASSWORD=nikmannik
