--- a/cinema-booking-system/package.json
+++ b/cinema-booking-system/package.json
@@ -12,6 +12,7 @@
     "@prisma/client": "^5.10.2",
     "mysql2": "^3.9.2",
     "next": "14.1.0",
+    "nodemailer": "^6.9.12",
     "react": "^18",
     "react-bootstrap": "^2.10.1",
     "react-dom": "^18",
@@ -20,6 +21,7 @@
   },
   "devDependencies": {
     "@types/node": "^20.11.19",
+    "@types/nodemailer": "^6.4.14",
     "@types/react": "18.2.57",
     "@types/react-dom": "^18",
     "eslint": "^8",
