--- a/cinema-booking-system/package.json
+++ b/cinema-booking-system/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@prisma/client": "^5.10.2",
+    "axios": "^1.6.8",
     "mysql2": "^3.9.2",
     "next": "14.1.0",
     "nodemailer": "^6.9.12",
