--- a/cinemadb/src/main/resources/application.properties
+++ b/cinemadb/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
-logging.level.org.springframework.web: DEBUG
+logging.level.org.springframework.web=DEBUG
 
 management.endpoints.web.exposure.include=mappings
 
