--- a/cinema-booking-system/package.json
+++ b/cinema-booking-system/package.json
@@ -12,6 +12,7 @@
     "@prisma/client": "^5.10.2",
     "axios": "^1.6.8",
     "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^4.0.0",
     "mysql2": "^3.9.2",
     "next": "^14.1.0",
     "nodemailer": "^6.9.12",
@@ -22,6 +23,7 @@
     "serverless-mysql": "^1.5.5"
   },
   "devDependencies": {
+    "@types/jwt-decode": "^3.1.0",
     "@types/node": "^20.11.19",
     "@types/nodemailer": "^6.4.14",
     "@types/react": "18.2.57",
