--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "jsonwebtoken": "^9.0.2",
     "next": "^14.1.4",
     "prettier": "^3.2.5",
+    "promise-all": "^1.0.0",
     "react": "^18.2.0"
   }
 }
