--- a/cinema-booking-system/package.json
+++ b/cinema-booking-system/package.json
@@ -20,6 +20,7 @@
     "react-bootstrap": "^2.10.1",
     "react-dom": "^18",
     "react-router-dom": "^6.22.3",
+    "react-toastify": "^10.0.5",
     "sequelize": "^6.37.1",
     "serverless-mysql": "^1.5.5"
   },
