--- a/cinema-booking-system/package.json
+++ b/cinema-booking-system/package.json
@@ -19,6 +19,7 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.1",
     "react-dom": "^18",
+    "react-hook-form": "^7.51.3",
     "react-router-dom": "^6.22.3",
     "react-toastify": "^10.0.5",
     "sequelize": "^6.37.1",
