--- a/cinema-booking-system/package.json
+++ b/cinema-booking-system/package.json
@@ -18,6 +18,7 @@
     "nodemailer": "^6.9.12",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.1",
+    "react-datepicker": "^6.9.0",
     "react-dom": "^18",
     "react-hook-form": "^7.51.3",
     "react-router-dom": "^6.22.3",
@@ -30,6 +31,7 @@
     "@types/node": "^20.11.19",
     "@types/nodemailer": "^6.4.14",
     "@types/react": "18.2.57",
+    "@types/react-datepicker": "^6.2.0",
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
