--- a/package.json
+++ b/package.json
@@ -6,5 +6,8 @@
     "prettier": "^3.2.5",
     "promise-all": "^1.0.0",
     "react": "^18.2.0"
+  },
+  "devDependencies": {
+    "@types/next": "^9.0.0"
   }
 }
