--- a/cinema-booking-system/package.json
+++ b/cinema-booking-system/package.json
@@ -33,9 +33,12 @@
     "@types/react": "18.2.57",
     "@types/react-datepicker": "^6.2.0",
     "@types/react-dom": "^18",
+    "autoprefixer": "^10.4.19",
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
+    "postcss": "^8.4.38",
     "prisma": "^5.10.2",
+    "tailwindcss": "^3.4.3",
     "typescript": "5.3.3"
   }
 }
